--- a/app/views/shared/_bottombar.html.erb
+++ b/app/views/shared/_bottombar.html.erb
@@ -28,7 +28,7 @@
   const input_bottom = document.querySelector('input');
 
   if (location.pathname === '/recipes') {
-    document.getElementById('bottom_recipes_index_link').style.textDecoration = 'underline'
+    document.getElementById('bottom_recipes_index_link').classList.add('active')
   }
 
   function bottomSearchQuery() {
