--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,11 +51,11 @@
             </div>
             <div class="recipe__card__info">
               <span>
-                <%= svg 'time' %>
+                <%# svg 'time' %>
                 <p>{{ recipe.preparation_time }}min</p>
               </span>
               <span>
-                <%= svg 'chef-hat' %>
+                <%# svg 'chef-hat' %>
                 <p>{{ recipe.difficulty }}</p>
               </span>
             </div>
