possible to open recipe in new tab

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -97,7 +97,8 @@
           margin-right: 1rem;
         }
 
-        .flex-div {
+        &__link {
+          text-decoration: none;
           width: 100%;
         }
 
