--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -3,39 +3,51 @@
     <div class="col-xs-12 col-md-8 col-md-offset-2">
       <div class="row">
         <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-          <ul class="letters">
-            <% @recipe_index.each_with_index do |(letter, recipes), index| %>
+          <section class="section-filter">
+            <ul class="recipes__types">
+              <li class="recipes__types__item">
+                <p>Végétariennes</p>
+              </li>
+              <li class="recipes__types__item">
+                <p>En moins de 30min</p>
+              </li>
+            </ul>
+          </section>
+          <section class="section-list">
+            <ul class="letters">
+              <% @recipe_index.each_with_index do |(letter, recipes), index| %>
               <% if index.even? %>
-                <div class="letter letter--left">
-                  <div class="letter__box">
-                    <h1><%= letter.upcase %></h1>
-                  </div>
-                  <ul class="recipes__list">
-                    <% recipes.each do |recipe| %>
-                    <li class="recipe">
-                      <%= link_to recipe[:name], recipe_path(recipe[:slug]) %>
-                    </li>
-                    <% end %>
-                  </ul>
+              <div class="letter letter--left">
+                <div class="letter__box">
+                  <h1><%= letter.upcase %></h1>
                 </div>
-                <div class="short-line"></div>
+                <ul class="recipes__list">
+                  <% recipes.each do |recipe| %>
+                  <li class="recipe">
+                    <%= link_to recipe[:name], recipe_path(recipe[:slug]) %>
+                  </li>
+                  <% end %>
+                </ul>
+              </div>
+              <div class="short-line"></div>
               <% else %>
-                <div class="letter letter--right">
-                  <ul class="recipes__list">
-                    <% recipes.each do |recipe| %>
-                    <li class="recipe">
-                      <%= link_to recipe[:name], recipe_path(recipe[:slug]) %>
-                    </li>
-                    <% end %>
-                  </ul>
-                  <div class="letter__box">
-                    <h1><%= letter.upcase %></h1>
-                  </div>
+              <div class="letter letter--right">
+                <ul class="recipes__list">
+                  <% recipes.each do |recipe| %>
+                  <li class="recipe">
+                    <%= link_to recipe[:name], recipe_path(recipe[:slug]) %>
+                  </li>
+                  <% end %>
+                </ul>
+                <div class="letter__box">
+                  <h1><%= letter.upcase %></h1>
                 </div>
-                <div class="short-line"></div>
+              </div>
+              <div class="short-line"></div>
               <% end %>
-            <% end %>
-          </ul>
+              <% end %>
+            </ul>
+          </section>
         </div>
       </div>
     </div>
