--- a/app/assets/stylesheets/recipes/_recipe_index.scss
+++ b/app/assets/stylesheets/recipes/_recipe_index.scss
@@ -1,4 +1,4 @@
-#recipe-index {
+#recipes-index {
   .recipes__types {
     margin: 0;
     margin-top: 5rem;
@@ -62,11 +62,7 @@
         margin-left: 1rem;
       }
     }
-
-    &:not(:last-child) {
-      margin-bottom: 4rem;
-    }
-
+    
     .letter__box {
       h1 {
         font-size: 10rem;
@@ -109,12 +105,10 @@
   }
 
   .short-line {
-    &:not(:last-child) {
-      width: 2rem;
-      height: 1px;
-      border: 1px solid black;
-      margin: 3rem auto;
-    }
+    width: 2rem;
+    height: 1px;
+    border: 1px solid black;
+    margin: 3rem auto;
   }
 
   @media screen and (max-width: $screen-s) {
