--- a/app/views/shared/_bottombar.html.erb
+++ b/app/views/shared/_bottombar.html.erb
@@ -24,16 +24,18 @@
   </div>
 </div>
 
-<script type="text/javascript">
-  const input_bottom = document.querySelector('input');
+<% content_for :after_js do %>
+  <script type="text/javascript">
+    const input_bottom = document.querySelector('input');
 
-  if (location.pathname === '/recipes') {
-    document.getElementById('bottom_recipes_index_link').classList.add('active')
-  }
+    if (location.pathname === '/recipes') {
+      document.getElementById('bottom_recipes_index_link').classList.add('active')
+    }
 
-  function bottomSearchQuery() {
-    const query = document.querySelector('.searchbox_bottom input').value
-    window.location = `${window.location.origin}/?query=${query}`
-    return false
-  }
-</script>
+    function bottomSearchQuery() {
+      const query = document.querySelector('.searchbox_bottom input').value
+      window.location = `${window.location.origin}/?query=${query}`
+      return false
+    }
+  </script>
+<% end %>
