--- a/app/views/tools/_form.html.erb
+++ b/app/views/tools/_form.html.erb
@@ -1,13 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-4 col-xs-offset-4">
-      <div class="form-wrapper">
-        <%= simple_form_for @tool do |f| %>
-          <%= f.input :name, label: false, placeholder: 'Tool Name' %>
-          <%= f.input :description, label: false, placeholder: 'Tool Description' %>
-          <%= f.button :submit, class: "btn btn-info"%>
-        <% end %>
-      </div>
+    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-4">
+      <%= simple_form_for @tool do |f| %>
+        <%= f.input :name, label: false, placeholder: "Nom" %>
+        <%= f.input :description, label: false, placeholder: 'Description' %>
+        <%= f.button :submit, class: "btn btn-info"%>
+      <% end %>
     </div>
   </div>
 </div>
