--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -115,12 +115,13 @@
           background-position: center;
           width: 100%;
           height: 18rem;
+          box-shadow: 5px 5px $color-black;
         }
         .recipe__card__info {
           display: flex;
           justify-content: space-around;
           align-items: center;
-          margin-top: 5px;
+          margin-top: 6px;
           p {
             line-height: 2rem;
           }
