--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -100,6 +100,9 @@
         &__link {
           text-decoration: none;
           width: 100%;
+          &:last-child {
+            margin-right: .5rem;
+          }
         }
 
         h2 {
