bold cards design

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,7 +2,7 @@
 
 // Define fonts for body and headers
 $body-font: "Arial", "sans-serif";
-$headers-font: "Helvetica", "sans-serif";
+$headers-font: "Helvetica Neue", "sans-serif";
 
 // Set all fonts to 16px;
 body {
