--- a/app/assets/stylesheets/components/_bottombar.scss
+++ b/app/assets/stylesheets/components/_bottombar.scss
@@ -15,6 +15,7 @@
     color: $color-black;
     font-size: 2rem;
     margin-right: 5px;
+    font-weight: 600;
 
     &:after {
       content: '';
@@ -89,7 +90,7 @@
       color: $color-black;
       &:hover, &:focus { text-decoration: none; }
     }
-    
+
     .bar__title--text {
       font-size: 3rem;
       font-weight: 600;
