--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -121,6 +121,7 @@
         transition: all .4s ease;
         display: flex;
         align-items: flex-end;
+        padding-bottom: .5rem;
 
         &:not(:last-child) {
           margin-right: 1rem;
@@ -139,8 +140,8 @@
           text-transform: uppercase;
           font-size: 2.8rem;
           font-family: $headers-font;
-          font-weight: 400;
-          line-height: 3.2rem;
+          font-weight: 600;
+          margin-bottom: 0.5rem;
         }
         .recipe-image {
           background-size: cover;
@@ -151,22 +152,14 @@
         }
         .recipe__card__info {
           display: flex;
-          justify-content: space-around;
-          align-items: center;
-          margin-top: 6px;
+          justify-content: flex-start;
+          align-items: flex-end;
+          height: 100%;
           p {
-            line-height: 2rem;
-          }
-          #icon-time {
-            height: 2rem;
-            margin-right: 5px;
-          }
-          #icon-chef-hat {
-            height: 2rem;
-            margin-right: 5px;
-          }
-          span {
-            display: flex;
+            color: $color-white;
+            background-color: $color-black;
+            padding: .2rem .5rem 0 .5rem;
+            font-weight: 600;
           }
         }
       }
