set active storage locally

--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -116,7 +116,7 @@
       <div class="recipe-tags">
         <h4 style="margin-top: 10px; margin-bottom: 10px;">Photos</h4>
         <%= simple_form_for @recipe do |f| %>
-          <%= f.input :photos, as: :attachinary %>
+          <%# f.input :photos, as: :attachinary %>
           <%= hidden_field_tag 'slug', @recipe.slug %>
           <%= f.button :submit, class: "btn btn-info"%>
         <% end %>
