removing jquery and attachinary and adding active_storage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,7 +48,7 @@
             <h2>{{ recipe.name }}</h2>
             <div
               class="recipe-image"
-              :style='{ backgroundImage: `url("${recipe.photo_url}")` }'
+              :style='{ backgroundImage: `url("${recipe.image_url}")` }'
               >
               <div class="recipe__card__info">
                 <p>{{ recipe.preparation_time }}min</p>
