--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -115,8 +115,11 @@
       <!-- PHOTOS -->
       <div class="recipe-tags">
         <h4 style="margin-top: 10px; margin-bottom: 10px;">Photos</h4>
+        <% unless @recipe.image.attachment.nil? %>
+          <%= image_tag @recipe.image %>
+        <% end %>
         <%= simple_form_for @recipe do |f| %>
-          <%# f.input :photos, as: :attachinary %>
+          <%= f.file_field :image %>
           <%= hidden_field_tag 'slug', @recipe.slug %>
           <%= f.button :submit, class: "btn btn-info"%>
         <% end %>
