--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -29,7 +29,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-8 recipe-image">
-          <% if @recipe.image.attachment.present? %>
+          <% if @recipe.image.attached? %>
             <%= image_tag @recipe.image %>
           <% end %>
         </div>
