--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Cuisine. Japonaise. Simple."/>
     <meta property="og:description" content="Découvrez vite nos recettes inédites et faciles!"/>
-    <meta property="og:image:secure_url" content="https://res.cloudinary.com/dgv0y9kj7/image/upload/v1539552948/nqsdhbgsbh1u6joco0cq.jpg"/>
+    <meta property="og:image:secure_url" content=""/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta name="twitter:card" content="summary"/>
     <link rel="canonical" href="http://www.oishi.io"/>
@@ -41,7 +41,6 @@
     <% end %>
 
     <%= javascript_include_tag 'application' %>
-    <%= cloudinary_js_config %>
     <%= yield :after_js %>
   </body>
 </html>
