--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -1,6 +1,6 @@
 #recipe-show{
   color: black;
-  
+
   .header {
     margin-top: 3rem;
     font-size: 4.8rem;
@@ -8,7 +8,7 @@
   }
 
   .line {
-    border-bottom: 3px solid $color-black;
+    border-bottom: 5px solid $color-black;
     margin: 1rem 0 6rem 0;
   }
 
@@ -48,30 +48,40 @@
     }
   }
 
-  .recipe-mesures{
-    margin-top: 5rem;
-    ul {
-      li {
-      display: flex;
-      justify-content: flex-start;
-      line-height: 2.6rem;
-      margin-bottom: 1rem;
-        .measure__quantity {
-          font-weight: 600;
-          margin-right: 1rem;
-          width: 4rem;
-          text-align: right;
-          flex-shrink: 0;
+  .recipe-info {
+    position: sticky;
+    top: 5rem;
+
+    .recipe-mesures{
+      margin-top: 5rem;
+      ul {
+        li {
+          display: flex;
+          justify-content: flex-start;
+          line-height: 2.6rem;
+          margin-bottom: 1rem;
+          .measure__quantity {
+            font-weight: 600;
+            margin-right: 1rem;
+            width: 4rem;
+            text-align: right;
+            flex-shrink: 0;
+          }
         }
       }
     }
   }
+
 
   h3 {
     margin-bottom: 2rem;
     font-size: 2.4rem;
     text-transform: uppercase;
     font-weight: 600;
+    background-color: $color-black;
+    color: $color-white;
+    width: fit-content;
+    padding: 0.4rem .5rem 0.4rem .5rem;
   }
 
   .recipe-etapes {
@@ -126,6 +136,10 @@
       margin: 0.5rem 0 2rem 0;
     }
 
+    .recipe-info {
+      position: inherit;
+    }
+
     .servingsandtime {
       margin-bottom: 0;
       .recipe__info__container {
@@ -160,12 +174,12 @@
         }
         &--left {
           p {
-            flex-grow: 1;
+            flex: auto;
           }
         }
         &--right {
           p {
-            flex-grow: 1;
+            flex: auto;
           }
         }
       }
