--- a/app/assets/stylesheets/components/_topbar.scss
+++ b/app/assets/stylesheets/components/_topbar.scss
@@ -11,8 +11,9 @@
   background-color: $color-white;
 
   .bar__link {
-    color: $color-black;
+    color: $color-grey-dark;
     font-size: 2.4rem;
+    font-weight: 600;
 
     &:not(:first-child){
       margin-left: 5%;
@@ -26,14 +27,21 @@
       width: 0;
     }
 
+    &.active {
+      color: $color-black;
+    }
+
     &.active:after {
       width: 100%;
     }
 
-    &:hover, &:focus { text-decoration: none; }
+    &:hover, &:focus {
+      color: $color-black;
+      text-decoration: none;
+    }
 
-    &:hover:after,
-    &:focus:after {
+    &:not(.active):hover:after,
+    &:not(.active):focus:after {
       width: 100%;
       transform: scaleX(0);
       transform-origin: right;
@@ -123,13 +131,6 @@
 .agent-3 {
   animation-delay: 0.6s;
 }
-
-@media screen and (max-width: $screen-sm) {
-  #topbar {
-    display: none;
-  }
-}
-
 
 @keyframes fade-in-left {
   from {
