fix vcloak anim onn landing

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,14 @@
 <div
   class="landing"
   id="home"
+  v-cloak
 >
-  <section class="headline agent-1">
+  <section class="headline">
     <h1 class="headline__main">Cuisine japonaise.</h1>
     <h1 class="headline__sub">Simple</h1>
   </section>
 
-  <div class="section-search" v-cloak>
+  <div class="section-search">
     <div class="search">
       <a><%= svg 'search' %></a>
       <input
