--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   v-cloak
 >
   <section class="headline">
-    <h1 class="headline__main">Cuisine japonaise.</h1>
+    <h1 class="headline__main">Cuisine japonaise </h1>
     <h1 class="headline__sub">Simple</h1>
   </section>
 
