--- a/app/assets/stylesheets/components/_bottombar.scss
+++ b/app/assets/stylesheets/components/_bottombar.scss
@@ -3,13 +3,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
-  padding: 0 2%;
+  width: calc(100% - 1rem);
+  margin-left: .5rem;
   position: fixed;
   z-index: 1;
   bottom: 0;
   background-color: $color-white;
-  border-top: 1px solid $color-black;
+  border-top: 2px solid $color-black;
 
   .bar__link {
     color: $color-grey-dark;
