--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,14 +15,17 @@
 
     &__main{
       font-size: 4rem;
+      line-height: 4rem;
+      border: 3px solid $color-black;
+      padding: .5rem 1rem;
     }
     &__sub {
       font-size: 4rem;
       line-height: 4rem;
-      background-color: black;
-      color: white;
-      padding: 5px 8px 5px 8px;
-      margin-left: .5rem;
+      background-color: $color-black;
+      color: $color-white;
+      border: 3px solid $color-black;
+      padding: .5rem 1rem;
     }
   }
 
@@ -138,9 +141,10 @@
         h2 {
           color: $color-black;
           text-transform: uppercase;
-          font-size: 2.8rem;
+          font-size: 3.2rem;
           font-family: $headers-font;
-          font-weight: 600;
+          font-weight: 200;
+          letter-spacing: .1rem;
           margin-bottom: 0.5rem;
         }
         .recipe-image {
@@ -159,7 +163,6 @@
             color: $color-white;
             background-color: $color-black;
             padding: .2rem .5rem 0 .5rem;
-            font-weight: 600;
           }
         }
       }
@@ -190,13 +193,12 @@
       &__main{
         font-size: 3.6rem;
         line-height: 3.6rem;
-        margin-right: 0.7rem;
-        margin-bottom: .5rem;
+        border: none;
       }
       &__sub {
         font-size: 3.6rem;
         line-height: 3.6rem;
-        margin-left: 0;
+        border: none;
       }
     }
 
@@ -216,7 +218,7 @@
       .recipe__box__card {
         width: 23rem;
         h2 {
-          font-size: 2.4rem;
+          font-size: 2.8rem;
         }
       }
     }
