--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -5,11 +5,18 @@
     margin-top: 3rem;
     font-size: 4.8rem;
     text-transform: uppercase;
+    font-weight: 200;
+    letter-spacing: .1rem;
   }
 
   .line {
-    border-bottom: 5px solid $color-black;
+    border-bottom: 2px solid $color-black;
     margin: 1rem 0 6rem 0;
+
+    &__small {
+      border-bottom: 1px solid $color-black;
+      margin: 1rem 0 3rem 0;
+    }
   }
 
   .servingsandtime {
@@ -82,14 +89,10 @@
 
 
   h3 {
-    margin-bottom: 2rem;
-    font-size: 2.4rem;
+    font-size: 3rem;
     text-transform: uppercase;
-    font-weight: 600;
-    background-color: $color-black;
-    color: $color-white;
-    width: fit-content;
-    padding: 0.4rem .5rem 0.4rem .5rem;
+    font-weight: 200;
+    letter-spacing: .1rem;
   }
 
   .recipe-etapes {
@@ -129,7 +132,7 @@
     &:not(:last-child) {
       width: 2rem;
       height: 1px;
-      border: 2px solid black;
+      border: 1px solid $color-black;
       margin: 4rem auto;
     }
   }
@@ -137,10 +140,11 @@
   @media screen and (max-width: $screen-s) {
     .header {
       margin: 0;
-      font-size: 3.8rem;
+      font-size: 3.4rem;
     }
 
     .line {
+      border-bottom: 1px solid $color-black;
       margin: 0.5rem 0 2rem 0;
     }
 
@@ -163,7 +167,7 @@
     }
 
     h3 {
-      font-size: 2rem;
+      font-size: 3rem;
     }
 
     .recipe-topnotes {
