--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -39,6 +39,7 @@
         <div class="col-sm-4 col-xs-12 recipe-info">
           <div class="recipe-mesures">
             <h3>Ingrédients</h3>
+            <div class="line line__small"></div>
             <ul>
               <% @measures.each do |measure| %>
                 <li>
@@ -56,6 +57,7 @@
 
         <div class="col-sm-8 col-xs-12 recipe-etapes">
           <h3>Préparation</h3>
+          <div class="line line__small"></div>
 
           <% @steps.each_with_index do |step, index| %>
             <% if index.even? %>
