fix mobile font-wright

--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -141,6 +141,7 @@
     .header {
       margin: 0;
       font-size: 3.4rem;
+      font-weight: 400;
     }
 
     .line {
@@ -168,6 +169,7 @@
 
     h3 {
       font-size: 3rem;
+      font-weight: 400;
     }
 
     .recipe-topnotes {
