--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -218,8 +218,9 @@
       .recipe__box__card {
         width: 23rem;
         h2 {
-          font-size: 2.8rem;
-          font-weight: 400;
+          font-size: 2.4rem;
+          font-weight: 300;
+          letter-spacing: 0;
         }
       }
     }
