--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -141,7 +141,8 @@
     .header {
       margin: 0;
       font-size: 3.4rem;
-      font-weight: 400;
+      font-weight: 300;
+      letter-spacing: 0;
     }
 
     .line {
@@ -168,8 +169,9 @@
     }
 
     h3 {
-      font-size: 3rem;
-      font-weight: 400;
+      font-size: 2.4rem;
+      font-weight: 300;
+      letter-spacing: 0;
     }
 
     .recipe-topnotes {
