--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_title, "#{DEFAULT_META["meta_product_name"]} - Index des recettes" %>
+<% content_for :meta_description, "Parcourez nos recettes délicieuses." %>
+
 <div id="recipes-index" class="container" v-cloak>
   <div class="row">
     <div class="col-xs-12 col-md-8 col-md-offset-2">
