--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :meta_title, "#{DEFAULT_META["meta_product_name"]} - #{@recipe.name}" %>
+<% content_for :meta_description, @recipe.description %>
+<% content_for :meta_image, rails_blob_url(@recipe.image) %>
+
 <div id="recipe-show" class="container" >
   <div class="row">
     <div class="col-xs-12 col-md-10 col-md-offset-1">
