--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -60,6 +60,9 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        width: 100%;
+        transition: all .4s ease;
+        text-align: left;
         h3 {
           font-size: 3rem;
           font-weight: 400;
@@ -83,14 +86,14 @@
         text-align: left;
         font-size: 2.4rem;
         line-height: 2.4rem;
-        transition: all .4s;
+        transition: all .4s ease;
         cursor: pointer;
         width: 2.4rem;
         color: transparent;
         background: $color-white url("search.svg") no-repeat 0px center;
         &:focus {
           padding-left: 35px;
-          width: 32rem;
+          width: 100%;
           color: $color-black;
           cursor: auto;
           outline: none;
