--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,11 +12,15 @@
     <div class="search">
       <div
         class="search__text"
-        v-bind:style="[searchIsFocused ? { width: 0 } : { width: '100%' }]"
+        v-bind:style="[searchIsFocused ? { width: 0 } : { width: 'auto' }]"
       >
         <h3 >Recettes du moment</h3>
       </div>
-
+      <div
+        class="vertical-line"
+        v-bind:style="[searchIsFocused ? { width: 0 } : { width: '2px' }]"
+      >
+      </div>
       <input
         v-on:input="query = $event.target.value"
         type="search"
