--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
         class="search__text"
         v-bind:style="[searchIsFocused ? { width: 0 } : { width: 'auto' }]"
       >
-        <h3 >Recettes du moment</h3>
+        <h3 >{{ searchText }}</h3>
       </div>
       <div
         class="vertical-line"
