keep search onn blur

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -86,6 +86,7 @@
         color: transparent;
         background: $color-white url("search.svg") no-repeat 0px center;
 
+
         &:focus {
           padding-left: 35px;
           width: 100%;
@@ -94,6 +95,14 @@
           outline: none;
           &::-webkit-input-placeholder { opacity: 0; }
         }
+      }
+      .active {
+        padding-left: 35px;
+        width: 100%;
+        color: $color-black;
+        cursor: auto;
+        outline: none;
+        &::-webkit-input-placeholder { opacity: 0; }
       }
     }
 
