landinng search design

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -70,7 +70,8 @@
       }
 
       .vertical-line {
-        height: 3rem;
+        height: 4px;
+        border-radius: 50%;
         width: 2px;
         background-color: $color-black;
       }
