--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -32,7 +32,7 @@
 
   .section-search {
     width: 100%;
-    padding: 0 .5rem 0 1rem;
+    padding: 0 .5rem;
     margin-top: 10rem;
 
     .search {
@@ -42,7 +42,7 @@
       text-align: center;
       margin: auto;
       margin-bottom: 2rem;
-      width: 33rem;
+      width: 35rem;
       height: 4.5rem;
 
       a {
@@ -81,29 +81,19 @@
         text-align: left;
         font-size: 3rem;
         line-height: 2.4rem;
-        transition: all .4s ease;
+        padding: 0 10px 0 35px;
         cursor: pointer;
-        width: 2.4rem;
-        color: transparent;
-        background: $color-white url("search.svg") no-repeat 0px center;
-
-        &:focus {
-          padding-left: 35px;
-          width: 100%;
-          color: $color-black;
-          cursor: auto;
-          outline: none;
-          &::-webkit-input-placeholder { opacity: 0; }
-        }
-      }
-
-      .active {
-        padding-left: 35px;
         width: 100%;
-        color: $color-black;
-        cursor: auto;
         outline: none;
-        &::-webkit-input-placeholder { opacity: 0; }
+        background: $color-white url("search.svg") no-repeat 0px center;
+      }
+      button {
+        border: none;
+        background-color: $color-white;
+        cursor: pointer;
+        margin-bottom: -.3rem;
+        width: 1.5rem;
+        outline: none;
       }
     }
 
@@ -198,7 +188,6 @@
           width: 100%;
           height: 18rem;
           transition: all .3s ease;
-          // box-shadow: 5px 5px $color-black;
         }
         .recipe__card__info {
           display: flex;
@@ -251,7 +240,7 @@
     .section-search {
       margin-top: 5rem;
       .search {
-        width: 28rem;
+        width: 29rem;
         &__text {
           width: 100%;
           h3 {
