--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,29 +9,20 @@
   </section>
 
   <div class="section-search">
-    <div class="search">
-      <div
-        class="search__text"
-        v-bind:style="[searchIsFocused ? { width: 0 } : { width: 'auto' }]"
-      >
-        <h3 >{{ searchText }}</h3>
-      </div>
-      <div
-        class="vertical-line"
-        v-bind:style="[searchIsFocused ? { width: 0 } : { width: '4px' }]"
-      >
-      </div>
-      <input
-        v-on:input="query = $event.target.value"
-        type="search"
-        name="search"
-        v-model="query"
-        class="search__input"
-        v-on:focus="searchFocus()"
-        v-bind:class="searchIsFocused ? 'active' : ''"
-      >
-      <a v-if='searchIsFocused' v-on:click='clearQuery'><%= svg 'delete' %></a>
-    </div>
+      <form novalidate="novalidate" v-on:submit.prevent="searchRecipes">
+        <div role="search" class="search">
+          <input
+            v-on:input="query = $event.target.value"
+            type="search"
+            name="search"
+            v-model="query"
+            id="landing-search"
+          >
+          <button type="reset" title="Annuler" v-on:click="clearQuery">
+            <%= svg 'delete' %>
+          </button>
+        </div>
+      </form>
     <div class="recipe__box">
       <div
         v-if="recipesCount === 0 && !isLoading"
@@ -42,14 +33,11 @@
           <a href="/recipes">Voir toutes les recettes</a>
         </span>
       </div>
-      <transition-group
+      <div
         v-else
         name="recipe-cards"
-        tag="div"
         class="recipe__box--scroll-wrapper"
         v-bind:style="{ marginLeft: leftMargin }"
-        v-on:before-enter="getLeftMargin"
-        v-on:after-leave="getLeftMargin"
       >
         <div
           v-for="recipe in recipes"
@@ -68,7 +56,7 @@
             </div>
           </a>
         </div>
-      </transition-group>
+      </div>
     </div>
   </div>
 </div>
